--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,27 +1,28 @@
 <resources>
     <string name="app_name">Livraria (Kotlin + JetPack)</string>
-    <string name="action_settings">Configurações</string>
-    <string name="word_label">Nome do Livro</string>
-    <string name="hint_word">Nome do Livro..</string>
-    <string name="meaning_label">Genero</string>
-    <string name="hint_meaning">Genero..</string>
+    <string name="action_clear_list">Excluir Todos Os Livros</string>
+    <string name="autor_hint">Autor..</string>
+    <string name="autor_label">Autor</string>
+    <string name="book_deleted_label">Livro Excluído</string>
+    <string name="book_hint">Nome do Livro..</string>
+    <string name="book_label">Nome do Livro</string>
     <string name="btn_delete_label">EXCLUIR</string>
     <string name="btn_save_label">SALVAR</string>
-    <string name="empty_book_not_saved">Livro vazio, não salvo</string>
-    <string name="word_deleted">Livro Excluído</string>
-    <string name="action_clear_list">Excluir Todos Os Livros</string>
     <string name="confirmacao_excluir_lista">Tem certeza que deseja excluir todos os livros?</string>
-    <string name="toast_lista_excluida">Livros excluidos</string>
-    <string name="dialog_sim">SIM</string>
     <string name="dialog_nao">NÃO</string>
-    <string name="numero_de_livros">Total de Livros:</string>
-    <string name="autor_label">Autor</string>
-    <string name="hint_autor">Autor..</string>
-    <string name="hint_preco">Preço..</string>
-    <string name="preco_label">Preço</string>
+    <string name="dialog_sim">SIM</string>
+    <string name="empty_book_not_saved">Livro vazio, não salvo</string>
+    <string name="genero_hint">Genero..</string>
+    <string name="genero_label">Genero</string>
     <string name="livro_numero_label">Livro Número:</string>
     <string name="obrigatorio_nome_livro">É necessário informar o nome do livro</string>
     <string name="obrigatorio_autor">É necessário informar o autor</string>
     <string name="obrigatorio_genero">É necessário informar um genero</string>
     <string name="obrigatorio_preco">Obrigatório informar um preço</string>
+    <string name="preco_label">Preço</string>
+    <string name="preco_hint">Preço..</string>
+    <string name="toast_livros_excluidos">Livros excluidos</string>
+    <string name="total_label">Total de Livros:</string>
+    <string name="total_txt">0</string>
+    <string name="exclude_book">Tem certeza que deseja excluir este livro?</string>
 </resources>
